--- a/customer-feedback/getSignedURL/package.json
+++ b/customer-feedback/getSignedURL/package.json
@@ -2,7 +2,7 @@
   "name": "post-customer-feedback",
   "version": "0.0.1",
   "description": "Posts customer feedback in the form of unstructured text data",
-  "main": "post.js",
+  "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
